plang/testing/logs/false-incorrect/77/program77.p.p
sWt (h mDyD) (j lX (ZE) (CHrlO)) (KDOR9) N :- zCp0 ISnB AI4 (v4si (J) (J65) N) D8J.

xxLTm (eSb R (XI)) Y8y (GTw) xas :- (mu), (t l sxFx dDAYS ND), (bClj Hu32; mK (NgK) (ac (df SG70 (oMTZ (q obkVj (ls) (LUWRi)) tF03K HBSOc) (B) (FVd)) (orI (Afl) g (JTS) oXE7P) q)), y7Yi4 (WE) cZ8 (VuyV) Ym6G2, w5apN rcX7p (obY (wkr Ts67 (kM yqYbC i BW (QcQ))) (Oi7LF)) NKgzS, qg (Sl) (nKTeG JDQe (F3)) D0 (iPw (juUJ2 jc5Z (foW98 (L4x5T) (oNBQ7 m7C Ou8C ay6) wFRZS) (O) (ORRU1))); iBZrW fp5f, h kW E5, pbx29 (WB7) (Qhaa) R (GcJez); br K, (bJ8J9 bmw, qFk UbkR; g; z UvIA (L6)).

otHf :- (jx24 (F4A) (YBv4) s; ((b umGee (oD))), (jpY; o Jh Sw ytE; fLgC (Jgkuh), qX2 (jEVs (U) (W)) BTQ9 OSb)).


miZm HFm A.


kr (L) e7q9P :- n (t mzAx Czn (gACO (LcWNI) Ev32W NO)), h ybli (bV8 E6z (i (DpI))) (mco (po0 Hh6rx (Eclt) pIT) mfCq) (b1qj HlB (xlB Q Hw)).


gU ptQ9 B (TXx).
w4 (g) (yAP Xpzq hM55x zxFL) (qr2zx).

cU1 (wp) N1D w ZhFz :- i2ARU; vG jdCbB; hTme HkTW3, (k; xM (VKXJ7) GS (jLR1L)), jnH (xa (ctxJr sku (ILv))) eF, (zOaJq qLdsD fLl NYia1 sHN), (vY (jXO4e (uBijy (bww Auhrh Pvz) (CRl) (lGc QA4 (uTkr7) AhAT0 (rM rHUJY (r vgl (ET) (Au) SeIN) i (FGKO))))) (hj FMtmj OL WYAf (Bx6jm)) (zrZ PF X)), hD j2U Oxo9; c (qZ6w kX u7 (ZdA92)), (qO6or (Tv)), tDu VRj (RI).


z.
? (p (vQ5 ptLRA (AXtM0)) eD0T; fzWVA (cpR fgYq bB) Mvjp Qe (a (Memi))); ((dq8s EONiK)), (vsq Ha6Ov (JB9E) (hvB (IxZ) (CjHKJ)) Uv); bN (u7) ld (tv (mdd lzS) (KN5)) (d3B); (eQSl4 (Vaf) (ED) R5), eszr (Robd); (a), mHfq (f8y RRe (b (E) nif) (Z)) bff93.

